--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
    "homepage": "https://github.com/zamansky/shadow-cjs-template#readme",
    "dependencies": {
       "create-react-class": "^15.6.3",
+      "onchange": "^7.0.0",
       "react": "^16.9.0",
       "react-dom": "^16.9.0",
-      "shadow-cljs": "^2.8.83",
+      "shadow-cljs": "^2.8.102",
       "tailwindcss": "^1.1.4"
    }
 }
